<?xml version="1.0"?>
<package format="3">
  <name>imu_bt_publisher</name>
  <version>0.0.1</version>
  <description>Bluetooth IMU data publisher for ESP32 → Jetson Nano via RFCOMM</description>


  <maintainer email="juan.beron@upb.edu.co">Juan Esteban Berón</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
