<?xml version="1.0"?>
<package format="3">
  <name>imu_ws_server</name>
  <version>0.0.1</version>
  <description>ROS 2 node that exposes IMU data over a WebSocket server.</description>

  <maintainer email="claudio@example.com">Claudio</maintainer>
  <license>MIT</license>

  <!-- Build tool: Python-based package -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies required at runtime -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
