<?xml version="1.0"?>
<package format="3">
  <name>imu_publisher_node</name>
  <version>0.0.1</version>
  <description>Jetson-side IMU publisher node using Bluetooth ESP32 over RFCOMM.</description>

  <maintainer email="claudio@example.com">Claudio</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
